Fix: ajustada as classes de Test dos controller